--- a/sven/templates/core/base.html
+++ b/sven/templates/core/base.html
@@ -384,5 +384,7 @@
     $.modal.alert('<p>The documentation won\'t work on Chrome because you opened it as a local file. Place files on any web server to browse it safely.</p>Or use another modern brower, but Chrome just rocks...');
   }
 </script>
+<input type="hidden" class="global_module_listing" />
+<input type="hidden" class="module_factory_status" />
 </body>
 </html>
