--- a/sven/templates/monitor/modules/Cloud/NestThermostat/widget.html
+++ b/sven/templates/monitor/modules/Cloud/NestThermostat/widget.html
@@ -6,20 +6,20 @@
     Outside Humidity
 	</div>
 	<div class="right-column">
-    <span id="weather-inside-temperature">..</span><br/>
-    <span id="weather-inside-humidity">..</span><br/><br>
-    <span id="weather-outside-temperature">..</span><br/>
-    <span id="weather-outside-humidity">..</span>
+    <span id="weather-inside-temperature">..</span>F<br/>
+    <span id="weather-inside-humidity">..</span>%<br/><br>
+    <span id="weather-outside-temperature">..</span>F<br/>
+    <span id="weather-outside-humidity">..</span>%
 	</div>
 </div>
 
 <script>
   SvenWSCallbacks.CurrentWeather = function(data) {
-    $('#weather-inside-temperature').html(data.inside_temperature);
-    $('#weather-inside-humidity').html(data.inside_humidity);
+    $('#weather-inside-temperature').html(Math.round(data.inside_temperature));
+    $('#weather-inside-humidity').html(Math.round(data.inside_humidity));
 
-    $('#weather-outside-temperature').html(data.outside_weather.now.current_temperature);
-    $('#weather-outside-humidity').html(data.outside_weather.now.current_humidity);
+    $('#weather-outside-temperature').html(Math.round(data.outside_weather.now.current_temperature));
+    $('#weather-outside-humidity').html(Math.round(data.outside_weather.now.current_humidity));
 
     $('#current_temperature').val(data.inside_temperature).trigger('change');
   }
