--- a/sven/templates/monitor/locationGroupList.html
+++ b/sven/templates/monitor/locationGroupList.html
@@ -39,7 +39,7 @@
     </tfoot>
 
     <tbody>
-        {% for object in data.locationGroups %}
+        {% for object in data.location_groups %}
         <tr class="locationGroupRow">
             <th scope="row" class="checkbox-cell">
                 <input type="checkbox" name="location_groups_checked[]" value="{{ object.id }}">
