--- a/sven/templates/monitor/location.html
+++ b/sven/templates/monitor/location.html
@@ -18,7 +18,7 @@
 {% block content %}
 <div class="block anthracite-gradient glow clear-both margin-top">
     <form id="input_form" autocomplete="off">
-    <input type="hidden" name="location_group_id" id="location_group_id" value="{{ locationGroup.id }}" />
+    <input type="hidden" name="location_group_id" id="location_group_id" value="{{ location_group.id }}" />
     <input type="hidden" name="location_id" id="location_id" value="{{ location.id }}" />
 
     <h3 class="block-title">
