--- a/sven/templates/monitor/locationGroup.html
+++ b/sven/templates/monitor/locationGroup.html
@@ -66,7 +66,7 @@
     </form>
 </div>
 
-<a href="{{ base_url }}{% url 'monitor:location_groups' %}" class="button margin-right edit_location_save">
+<a href="{{ base_url }}{% url 'monitor:locationGroups' %}" class="button margin-right edit_location_save">
     <span class="button-icon blue-gradient glossy"><span class="icon-like"></span></span>
     Finished
 </a>
@@ -75,7 +75,7 @@
 
 <div id="table_data_container"></div>
 
-<a href="{{ base_url }}{% url 'monitor:location_groups' %}" class="button margin-right edit_location_save">
+<a href="{{ base_url }}{% url 'monitor:locationGroups' %}" class="button margin-right edit_location_save">
     <span class="button-icon blue-gradient glossy"><span class="icon-like"></span></span>
     Finished
 </a>
