--- a/sven/templates/monitor/locationList.html
+++ b/sven/templates/monitor/locationList.html
@@ -35,7 +35,7 @@
     </tfoot>
 
     <tbody>
-        {% for object in locationGroup.location_set.all %}
+        {% for object in location_group.location_set.all %}
         <tr class="locationsRow">
             <th scope="row" class="checkbox-cell"><input type="checkbox" name="locations_checked[]" value="{{ object.id }}"></th>
             <td class="locationsRowActionCell">
